<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity" >

    <LinearLayout
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="58dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="3dp"
                android:layout_margin="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_cpu_usage">

                <TextView
                    android:textStyle="bold"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"
                    android:text="@string/cpu_usage"
                    android:gravity="center_horizontal|bottom" />

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:id="@+id/cpu_usage"
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:layout_width="match_parent"
                    android:fontFamily="sans-serif"
                    android:textSize="36sp"
                    android:textColor="@android:color/white"
                    android:text="--"
                    android:gravity="center_horizontal|top" />

            </LinearLayout>



            <LinearLayout
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="3dp"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:background="@drawable/shape_free_memory"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:textStyle="bold"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"
                    android:text="@string/free_memory"
                    android:gravity="center_horizontal|bottom" />

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:id="@+id/free_memory"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:textSize="36sp"
                    android:textColor="@android:color/white"
                    android:text="--"
                    android:gravity="center_horizontal|top" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="3dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_load_average"
                android:gravity="center" >

                <TextView
                    android:textStyle="bold"
                    android:layout_height="0dp"
                    android:layout_weight="0.4"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"
                    android:text="@string/load_average"
                    android:gravity="center_horizontal|bottom" />

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:id="@+id/load_average"
                    android:fontFamily="sans-serif"
                    android:lines="1"
                    android:layout_width="match_parent"
                    android:textSize="60sp"
                    android:textColor="@android:color/white"
                    android:text="--"
                    android:gravity="center_horizontal|top" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="3dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:background="@drawable/shape_network_usage">

                <TextView
                    android:textStyle="bold"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"
                    android:text="@string/network"
                    android:gravity="center_horizontal|bottom" />

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:id="@+id/network_usage"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:textSize="36sp"
                    android:textColor="@android:color/white"
                    android:text="--"
                    android:gravity="center_horizontal|top" />

            </LinearLayout>

            <LinearLayout
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:elevation="3dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:background="@drawable/shape_disk_usage"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">

                <TextView
                    android:textStyle="bold"
                    android:layout_height="0dp"
                    android:layout_weight="0.5"
                    android:layout_width="match_parent"
                    android:textSize="20sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@android:color/white"
                    android:text="@string/disk"
                    android:gravity="center_horizontal|bottom" />

                <com.sonelli.juicessh.performancemonitor.views.AutoResizeTextView
                    android:layout_height="0dp"
                    android:layout_weight="0.75"
                    android:id="@+id/disk_usage"
                    android:fontFamily="sans-serif"
                    android:layout_width="match_parent"
                    android:textSize="36sp"
                    android:textColor="@android:color/white"
                    android:text="--"
                    android:gravity="center_horizontal|top" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


    <Button
        android:backgroundTint="@color/dashboard_red"
        android:layout_margin="8dp"
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/connect" />

    <Button
        android:backgroundTint="@color/dashboard_red"
        android:layout_margin="8dp"
        android:visibility="gone"
        android:id="@+id/disconnect_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:text="@string/disconnect" />

</RelativeLayout>
